# prompt-improve

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  prompt-improve.py  pyproject.toml  shim.py
.claude/orchestration/: registry.json  registry.json.bak
.github/workflows/: ci.yml
.memory-bank/: CONTEXT.md  MEMORY.md  REFERENCE.md  activeContext.md  agent-sessions.md  currentTask.md  decisions.graph.jsonl  progress.md  systemPatterns.md
.memory-bank/topics/: _index.md  agent-sessions.md  code-architecture.md  code-map.md  foreign-sessions.md
docs/plans/: 2026-07-12-001-fix-import-time-config-fail-open-plan.md  2026-07-23-001-reliability-cache-diagnostics-plan.md
scripts/: ollama-warmup.sh
src/prompt_improve/: __init__.py  cli.py  command.py
src/prompt_improve/features/: classify.py  clean.py  detect.py  ecosystem.py  hints.py  improve.py  rules.py  target.py
src/prompt_improve/shared/: cache.py  compat.py  config.py  filelock.py  metrics.py  ollama.py  ollama_url.py  paths.py
tests/: __init__.py  _helpers.py  compat.py  test_cache.py  test_classify.py  test_clean.py  test_cli.py  test_command.py  test_config.py  test_detect.py  test_ecosystem_skills.py  test_hints.py  test_improve.py  test_improve_cascade.py  test_improve_fallback.py  test_improve_messages.py  test_improve_prompt.py  test_improve_role_model.py  test_improve_routing.py  test_infra.py  test_metrics.py  test_target.py  test_topic_hint.py
todos/: 001-complete-p3-consolidate-url-normalization-tests.md
